--- a/POS/pointOfSales/pointOfSales/src/main/resources/application.properties
+++ b/POS/pointOfSales/pointOfSales/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=pointOfSales
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/POS
+spring.datasource.username=root
+spring.datasource.password=Twosiths@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+
+
+# Execute SQL script on startup
+#spring.datasource.initialization-mode=always
