Added security layer with JWT token authentication. Implemented user service, controller, and repository. Utilized Spring Security dependencies for authentication.

--- a/POS/pointOfSales/pointOfSales/pom.xml
+++ b/POS/pointOfSales/pointOfSales/pom.xml
@@ -48,6 +48,27 @@
     <version>1.18.20</version> <!-- Use the latest version available -->
     <scope>provided</scope>
 </dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+</dependency>
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-api</artifactId>
+    <version>0.11.2</version> <!-- Adjust version as needed -->
+</dependency>
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-impl</artifactId>
+    <version>0.11.2</version> <!-- Adjust version as needed -->
+    <scope>runtime</scope>
+</dependency>
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-jackson</artifactId>
+    <version>0.11.2</version> <!-- Adjust version as needed -->
+    <scope>runtime</scope>
+</dependency>
 	</dependencies>
 
 	<build>
